<resources>
    <string name="app_name">智能掌上办公</string>
    <string name="jump">跳过</string>
    <string name="now_experience">立即体验</string>

    <string name="config_server_address">服务器地址</string>
    <string name="check">检测</string>
    <string name="next">下一步</string>
    <string name="server_detection">服务器检测</string>
    <string name="please_config_server_address">请配置服务器地址!</string>
    <string name="save_server_address_tip">保存后可在设置中修改</string>
    <string name="input_server_address">请填写服务器地址</string>
    <string name="server_address_is_empty">服务地址不能为空</string>
    <string name="server_address_format_error">服务地址格式不正确</string>
    <string name="know_it">知道了</string>

    <string name="system_setting">系统设置</string>
    <string name="server_address">服务地址</string>
    <string name="more_language">多语言</string>
    <string name="current_version">当前版本</string>
    <string name="language_chinese">中文</string>
    <string name="language_english">英文 English</string>

    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="finish">完成</string>
    <string name="no_net_tip">网络异常,请确认网络连接状况</string>

    <string name="access_request">权限申请</string>
    <string name="grant_camera_permission">请在"设置"-"应用"-"H3 BPM"-"权限"中开启相机及存储权限，以便正常使用H3 BPM的功能。</string>
    <string name="confirm">确定</string>

    <string name="scan_code_tip">将二维码/条码放入框内，即可自动扫描</string>
    <string name="fail_open_camera">打开相机失败</string>
</resources>